fix: add overflow hidden to prevent overflow on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @tailwind utilities;
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
